# Quantum-Studio

./: .gitignore  Cargo.toml
crates/ide-app/: Cargo.toml
crates/ide-app/src/: main.rs
crates/ide-buffer/: Cargo.toml
crates/ide-buffer/src/: lib.rs
crates/ide-core/: Cargo.toml
crates/ide-core/src/: lib.rs
crates/ide-gpu/: Cargo.toml
crates/ide-gpu/src/: cursor.wgsl  cursor_renderer.rs  glyph.wgsl  lib.rs  text_renderer.rs
crates/ide-text/: Cargo.toml
crates/ide-text/src/: lib.rs
crates/ide-ui/: Cargo.toml
crates/ide-ui/src/: lib.rs
